--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
+STAGE=dev
 DB_PASSWORD=postgre
 DB_NAME=TesloDB
 DB_HOST=localhost
@@ -6,3 +7,5 @@ DB_USERNAME=postgres
 
 PORT=3000
 HOST_API=http://localhost:3000/api
+
+JWT_SECRET=EstaEsLaClaveSecreta
